--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="wrapper">
     <div class="attribution">
-    <img class="qr-image" src="/images/image-qr-code.png"  alt="">
+    <img class="qr-image" src="./images/image-qr-code.png"  alt="">
   <p class="qr__title" > Improve your front-end <br>skills by building projects</p>
 
 <div class="qr__discription" >Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>  
